<?xml version="1.0" encoding="utf-8"?>

<keyboard-layouts xmlns:android="http://schemas.android.com/apk/res/android">
    <keyboard-layout android:name="xt894_finnish" android:label="@string/xt894_finnish_1" android:keyboardLayout="@raw/xt897_1"/>
    <keyboard-layout android:name="xt897_finnish" android:label="@string/xt897_finnish_1" android:keyboardLayout="@raw/xt897_1"/>
    <keyboard-layout android:name="apexq_finnish" android:label="@string/apexq_finnish_1" android:keyboardLayout="@raw/apexq_1"/>

    <keyboard-layout android:name="priv_fin_1" android:label="@string/priv_fin_1" android:keyboardLayout="@raw/priv_fin_1"/>
    <keyboard-layout android:name="priv_swe_1" android:label="@string/priv_swe_1" android:keyboardLayout="@raw/priv_swe_1"/>
    <keyboard-layout android:name="priv_nor_1" android:label="@string/priv_nor_1" android:keyboardLayout="@raw/priv_nor_1"/>
    <keyboard-layout android:name="priv_dan_1" android:label="@string/priv_dan_1" android:keyboardLayout="@raw/priv_dan_1"/>
    <keyboard-layout android:name="priv_ger_1" android:label="@string/priv_ger_1" android:keyboardLayout="@raw/priv_ger_1"/>

    <keyboard-layout android:name="keyone_fin_1" android:label="@string/keyone_fin_1" android:keyboardLayout="@raw/priv_fin_1"/>
    <keyboard-layout android:name="keyone_swe_1" android:label="@string/keyone_swe_1" android:keyboardLayout="@raw/priv_swe_1"/>
    <keyboard-layout android:name="keyone_nor_1" android:label="@string/keyone_nor_1" android:keyboardLayout="@raw/priv_nor_1"/>
    <keyboard-layout android:name="keyone_dan_1" android:label="@string/keyone_dan_1" android:keyboardLayout="@raw/priv_dan_1"/>
    <keyboard-layout android:name="keyone_ger_1" android:label="@string/keyone_ger_1" android:keyboardLayout="@raw/priv_ger_1"/>

    <keyboard-layout android:name="gemini_bul_pho" android:label="@string/gemini_bul_pho" android:keyboardLayout="@raw/gemini_bul_pho"/>
    <keyboard-layout android:name="gemini_fin_1" android:label="@string/gemini_fin_1" android:keyboardLayout="@raw/gemini_fin_1"/>

    <keyboard-layout android:name="livmoto_fin_1" android:label="@string/livmoto_fin_1" android:keyboardLayout="@raw/livmoto_fin_1"/>
    <keyboard-layout android:name="livmoto_swe_1" android:label="@string/livmoto_swe_1" android:keyboardLayout="@raw/livmoto_swe_1"/>
    <keyboard-layout android:name="livmoto_nor_1" android:label="@string/livmoto_nor_1" android:keyboardLayout="@raw/livmoto_nor_1"/>
    <keyboard-layout android:name="livmoto_dan_1" android:label="@string/livmoto_dan_1" android:keyboardLayout="@raw/livmoto_dan_1"/>
    <keyboard-layout android:name="livmoto_ger_1" android:label="@string/livmoto_ger_1" android:keyboardLayout="@raw/livmoto_ger_1"/>

    <keyboard-layout android:name="pro1_qwerty_bul_pho" android:label="@string/pro1_qwerty_bul_pho" android:keyboardLayout="@raw/pro1_qwerty_bul_pho"/>
    <keyboard-layout android:name="pro1_qwertz_che_fra" android:label="@string/pro1_qwertz_che_fra" android:keyboardLayout="@raw/pro1_qwertz_che_fra"/>
    <keyboard-layout android:name="pro1_qwerty_cze_1" android:label="@string/pro1_qwerty_cze_1" android:keyboardLayout="@raw/pro1_qwerty_cze_1"/>
    <keyboard-layout android:name="pro1_qwerty_cze_2" android:label="@string/pro1_qwerty_cze_2" android:keyboardLayout="@raw/pro1_qwerty_cze_2"/>
    <keyboard-layout android:name="pro1_qwerty_dan_1" android:label="@string/pro1_qwerty_dan_1" android:keyboardLayout="@raw/pro1_qwerty_dan_1"/>
    <keyboard-layout android:name="pro1_qwerty_fin_1" android:label="@string/pro1_qwerty_fin_1" android:keyboardLayout="@raw/pro1_qwerty_fin_1"/>
    <keyboard-layout android:name="pro1_qwerty_ita_1" android:label="@string/pro1_qwerty_ita_1" android:keyboardLayout="@raw/pro1_qwerty_ita_1"/>
    <keyboard-layout android:name="pro1_qwerty_hun_1" android:label="@string/pro1_qwerty_hun_1" android:keyboardLayout="@raw/pro1_qwerty_hun_1"/>
    <keyboard-layout android:name="pro1_qwerty_nor_1" android:label="@string/pro1_qwerty_nor_1" android:keyboardLayout="@raw/pro1_qwerty_nor_1"/>
    <keyboard-layout android:name="pro1_qwerty_pol_prog" android:label="@string/pro1_qwerty_pol_prog" android:keyboardLayout="@raw/pro1_qwerty_pol_prog"/>
    <keyboard-layout android:name="pro1_qwerty_svk_1" android:label="@string/pro1_qwerty_svk_1" android:keyboardLayout="@raw/pro1_qwerty_svk_1"/>
    <keyboard-layout android:name="pro1_qwerty_swe_1" android:label="@string/pro1_qwerty_swe_1" android:keyboardLayout="@raw/pro1_qwerty_swe_1"/>
    <keyboard-layout android:name="pro1_qwerty_ukr_1" android:label="@string/pro1_qwerty_ukr_1" android:keyboardLayout="@raw/pro1_qwerty_ukr_1"/>
    <keyboard-layout android:name="pro1_qwerty_usa_1" android:label="@string/pro1_qwerty_usa_1" android:keyboardLayout="@raw/pro1_qwerty_usa_1"/>
    <keyboard-layout android:name="pro1_qwerty_usaintl_1" android:label="@string/pro1_qwerty_usaintl_1" android:keyboardLayout="@raw/pro1_qwerty_usaintl_1"/>
    <keyboard-layout android:name="pro1_qwerty_usaintl_fndead" android:label="@string/pro1_qwerty_usaintl_fndead" android:keyboardLayout="@raw/pro1_qwerty_usaintl_fndead"/>
    <keyboard-layout android:name="pro1_qwertz_cze_1" android:label="@string/pro1_qwertz_cze_1" android:keyboardLayout="@raw/pro1_qwertz_cze_1"/>
    <keyboard-layout android:name="pro1_qwertz_cze_2" android:label="@string/pro1_qwertz_cze_2" android:keyboardLayout="@raw/pro1_qwertz_cze_2"/>
    <keyboard-layout android:name="pro1_qwertz_dan_1" android:label="@string/pro1_qwertz_dan_1" android:keyboardLayout="@raw/pro1_qwertz_dan_1"/>
    <keyboard-layout android:name="pro1_qwertz_ell_1" android:label="@string/pro1_qwertz_ell_1" android:keyboardLayout="@raw/pro1_qwertz_ell_1"/>
    <keyboard-layout android:name="pro1_qwertz_fin_1" android:label="@string/pro1_qwertz_fin_1" android:keyboardLayout="@raw/pro1_qwertz_fin_1"/>
    <keyboard-layout android:name="pro1_qwertz_ger_1" android:label="@string/pro1_qwertz_ger_1" android:keyboardLayout="@raw/pro1_qwertz_ger_1"/>
    <keyboard-layout android:name="pro1_qwertz_hun_1" android:label="@string/pro1_qwertz_hun_1" android:keyboardLayout="@raw/pro1_qwertz_hun_1"/>
    <keyboard-layout android:name="pro1_qwertz_nor_1" android:label="@string/pro1_qwertz_nor_1" android:keyboardLayout="@raw/pro1_qwertz_nor_1"/>
    <keyboard-layout android:name="pro1_qwertz_por_1" android:label="@string/pro1_qwertz_por_1" android:keyboardLayout="@raw/pro1_qwertz_por_1"/>
    <keyboard-layout android:name="pro1_qwertz_swe_1" android:label="@string/pro1_qwertz_swe_1" android:keyboardLayout="@raw/pro1_qwertz_fin_1"/>
    <keyboard-layout android:name="pro1_qwertz_usa_1" android:label="@string/pro1_qwertz_usa_1" android:keyboardLayout="@raw/pro1_qwertz_usa_1"/>
    <keyboard-layout android:name="pro1_qwertz_usaintl_1" android:label="@string/pro1_qwertz_usaintl_1" android:keyboardLayout="@raw/pro1_qwertz_usaintl_1"/>
    <keyboard-layout android:name="pro1_qwertz_usaintl_fndead" android:label="@string/pro1_qwertz_usaintl_fndead" android:keyboardLayout="@raw/pro1_qwertz_usaintl_fndead"/>

    <keyboard-layout android:name="pro1x_qwertz_che_fra" android:label="@string/pro1x_qwertz_che_fra" android:keyboardLayout="@raw/pro1x_qwertz_che_fra"/>
    <keyboard-layout android:name="pro1x_qwertz_cze_1" android:label="@string/pro1x_qwertz_cze_1" android:keyboardLayout="@raw/pro1x_qwertz_cze_1"/>
    <keyboard-layout android:name="pro1x_qwertz_cze_2" android:label="@string/pro1x_qwertz_cze_2" android:keyboardLayout="@raw/pro1x_qwertz_cze_2"/>
    <keyboard-layout android:name="pro1x_qwertz_dan_1" android:label="@string/pro1x_qwertz_dan_1" android:keyboardLayout="@raw/pro1x_qwertz_dan_1"/>
    <keyboard-layout android:name="pro1x_qwertz_ell_1" android:label="@string/pro1x_qwertz_ell_1" android:keyboardLayout="@raw/pro1x_qwertz_ell_1"/>
    <keyboard-layout android:name="pro1x_qwertz_fin_1" android:label="@string/pro1x_qwertz_fin_1" android:keyboardLayout="@raw/pro1x_qwertz_fin_1"/>
    <keyboard-layout android:name="pro1x_qwertz_ger_1" android:label="@string/pro1x_qwertz_ger_1" android:keyboardLayout="@raw/pro1x_qwertz_ger_1"/>
    <keyboard-layout android:name="pro1x_qwertz_hun_1" android:label="@string/pro1x_qwertz_hun_1" android:keyboardLayout="@raw/pro1x_qwertz_hun_1"/>
    <keyboard-layout android:name="pro1x_qwertz_nor_1" android:label="@string/pro1x_qwertz_nor_1" android:keyboardLayout="@raw/pro1x_qwertz_nor_1"/>
    <keyboard-layout android:name="pro1x_qwertz_por_1" android:label="@string/pro1x_qwertz_por_1" android:keyboardLayout="@raw/pro1x_qwertz_por_1"/>
    <keyboard-layout android:name="pro1x_qwertz_swe_1" android:label="@string/pro1x_qwertz_swe_1" android:keyboardLayout="@raw/pro1x_qwertz_fin_1"/>
    <keyboard-layout android:name="pro1x_qwertz_usa_1" android:label="@string/pro1x_qwertz_usa_1" android:keyboardLayout="@raw/pro1x_qwertz_usa_1"/>
    <keyboard-layout android:name="pro1x_qwertz_usaintl_1" android:label="@string/pro1x_qwertz_usaintl_1" android:keyboardLayout="@raw/pro1x_qwertz_usaintl_1"/>
    <keyboard-layout android:name="pro1x_qwertz_usaintl_fndead" android:label="@string/pro1x_qwertz_usaintl_fndead" android:keyboardLayout="@raw/pro1x_qwertz_usaintl_fndead"/>

    <keyboard-layout android:name="pro1x_qwerty_dan_1" android:label="@string/pro1x_qwerty_dan_1" android:keyboardLayout="@raw/pro1x_qwerty_dan_1"/>
    <keyboard-layout android:name="pro1x_qwerty_fin_1" android:label="@string/pro1x_qwerty_fin_1" android:keyboardLayout="@raw/pro1x_qwerty_fin_1"/>
    <keyboard-layout android:name="pro1x_qwerty_nor_1" android:label="@string/pro1x_qwerty_nor_1" android:keyboardLayout="@raw/pro1x_qwerty_nor_1"/>
    <keyboard-layout android:name="pro1x_qwerty_swe_1" android:label="@string/pro1x_qwerty_swe_1" android:keyboardLayout="@raw/pro1x_qwerty_fin_1"/>
    <keyboard-layout android:name="pro1x_qwerty_cze_2" android:label="@string/pro1x_qwerty_cze_2" android:keyboardLayout="@raw/pro1x_qwerty_cze_2"/>
    <keyboard-layout android:name="pro1x_qwerty_usa_1" android:label="@string/pro1x_qwerty_usa_1" android:keyboardLayout="@raw/pro1x_qwerty_usa_1"/>

    <keyboard-layout android:name="pro1x_scandic_dan_1" android:label="@string/pro1x_scandic_dan_1" android:keyboardLayout="@raw/pro1x_scandic_dan_1"/>
    <keyboard-layout android:name="pro1x_scandic_fin_1" android:label="@string/pro1x_scandic_fin_1" android:keyboardLayout="@raw/pro1x_scandic_fin_1"/>
    <keyboard-layout android:name="pro1x_scandic_nor_1" android:label="@string/pro1x_scandic_nor_1" android:keyboardLayout="@raw/pro1x_scandic_nor_1"/>
    <keyboard-layout android:name="pro1x_scandic_swe_1" android:label="@string/pro1x_scandic_swe_1" android:keyboardLayout="@raw/pro1x_scandic_fin_1"/>

    <keyboard-layout android:name="empty" android:label="@string/empty_layout" android:keyboardLayout="@raw/empty"/>

</keyboard-layouts>
