<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fadeScrollbars="false"
    tools:context="fi.onse.qwerty.finnish.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mainLayout"
            android:layout_weight="1" >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/mainText"
                    android:paddingBottom="5dp"
                    />
        </FrameLayout>

    <FrameLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/semiLayout"
        android:layout_weight="1" >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_gravity="center">

            <TextView
                android:text="@string/configure_help_semi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewsemi"
                android:paddingBottom="5dp"
                />

            <Button
                    android:text="@string/configure_button_text_semi"
                    android:layout_below="@id/textViewsemi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                    android:id="@+id/LangInputSettings"/>

            <TextView
                android:text="@string/configure_help_below"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/configure_help_below1"
                android:paddingTop="5dp"
                android:layout_below="@+id/LangInputSettings"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp" />

        </RelativeLayout>
    </FrameLayout>

    <FrameLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/directLayout"
        android:layout_weight="1" >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_gravity="center">

    <TextView
            android:text="@string/configure_help_direct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/configure_help_textview_direct"
            android:paddingBottom="5dp"
        />

        <LinearLayout android:id="@+id/keybuttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/configure_help_textview_direct"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

        </LinearLayout>

        <TextView
            android:text="@string/configure_help_below"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/configure_help_below2"
            android:layout_below="@id/keybuttons"
            android:paddingTop="5dp"
            />

    </RelativeLayout>
    </FrameLayout>
    <FrameLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hideLayout"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_gravity="center">
        <TextView
            android:text="@string/hide_help_direct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hide_help_view"
            android:paddingBottom="5dp"
            />

        <Button
            android:text="@string/hide_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hideSwitch"
            android:layout_below="@id/hide_help_view"
            android:layout_centerHorizontal="true"/>

            <TextView
                android:text="@string/hide_help_below"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/hide_help_below"
                android:layout_below="@id/hideSwitch"
                android:paddingTop="5dp"
                />

        </RelativeLayout>
    </FrameLayout>
        <FrameLayout
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/privLayout2"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_gravity="center">
                <TextView
                    android:text="@string/priv_help2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/priv_help_view2"
                    android:paddingBottom="5dp"
                    />
            </RelativeLayout>
        </FrameLayout>
        <FrameLayout
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/privLayout"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_gravity="center">
                <TextView
                    android:text="@string/priv_help"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/priv_help_view"
                    android:paddingBottom="5dp"
                    />

                <Switch
                    android:text="@string/boot_switch_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bootSwitch"
                    android:layout_below="@id/priv_help_view"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>
        </FrameLayout>
</LinearLayout>
</ScrollView>
